get all columns and swagger
