# routes/api/columnRoutes.js
@@ -14,6 +14,6 @@ columnRouter.post('/', authenticate, addColumn.addColumn);
 
 columnRouter.delete('/:id', authenticate, isValidId, deleteColumn.deleteColumn);
 columnRouter.put('/:id', authenticate, isValidId, updateColumn.updateColumn);
-columnRouter.get('/', authenticate, getAllColumns.getAllColumns);
+columnRouter.get('/:id', authenticate, getAllColumns.getAllColumns); // id board
 columnRouter.get('/:id', authenticate, getColumnById.getColumnById);
 export default columnRouter;
